# Options-System

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
config/: __init__.py  config.yaml  features.yaml  labeling.yaml  macro.yaml  marketdata.yaml  micro_labeling.yaml  micro_model.yaml  microstructure.yaml  models.yaml  phase19.yaml  phase20.yaml  phase23_vol_h1.yaml  phase24_freedata.yaml  phase25_econ.yaml  sentiment.yaml  sentiment_gkg.yaml  settings.py  ta.yaml  validation.yaml  volatility.yaml
docs/: ARCHITECTURE.md  BILLING_SAFETY.md  DECISIONS.md  FEATURES.md  GLOSSARY.md  LABELING.md  MACRO.md  MARKETDATA.md  MICROSTRUCTURE.md  MICRO_LABELING.md  MICRO_MODEL.md  MODEL.md  PHASE19_AB.md  PHASE19_PREREGISTRATION.md  PHASE20_META.md  PHASE20_PREREGISTRATION.md  PHASE21_PREREGISTRATION.md  PHASE21_VOL.md  PHASE23_PREREGISTRATION.md  PHASE23_VOL.md  PHASE24_FREEDATA.md  PHASE24_PREREGISTRATION.md  PHASE25_ECONVALUE.md  PHASE25_PREREGISTRATION.md  RESEARCH_VERDICTS.md  SENTIMENT.md  SETUP.md  TA_FEATURES.md  VALIDATION.md
scripts/: bench_micro_reduce.py  download_finbert.py  phase18_notify.sh  render_ibc_config.py  smoke_test_gpu.py  smoke_test_ibkr.py  start_gateway.fish  stop_gateway.fish
scripts/systemd/: options-gateway.service  options-recorder.service
src/options_system/: __init__.py
src/options_system/backtest/: README.md
src/options_system/common/: README.md  databento_guard.py  external_data_policy.py  logging.py
src/options_system/data/: README.md  continuous.py  databento_loader.py  lake.py  recorder.py  store.py  validate.py
tests/: _micro_helpers.py  test_continuous.py  test_data_health.py  test_databento_loader.py  test_databento_spend_guard.py  test_features_catalog.py  test_features_compute.py  test_features_config.py  test_features_health.py  test_features_leakage.py  test_labeling_build.py  test_labeling_config.py  test_labeling_events.py  test_labeling_triple_barrier.py  test_labeling_weights.py  test_labels_health.py  test_lake.py  test_macro_config.py  test_macro_features_leakage.py  test_macro_ingest.py  test_marketdata_config.py  test_marketdata_features.py  test_marketdata_ingest.py  test_marketdata_lake.py  test_micro_health.py  test_micro_label_health.py  test_micro_labeling.py  test_micro_labeling_leakage.py  test_microstructure_bars.py  test_microstructure_config.py  test_microstructure_cost.py  test_microstructure_leakage.py  test_microstructure_model_dataset.py  test_microstructure_model_eval.py  test_microstructure_model_weights.py  test_microstructure_ofi.py  test_microstructure_parallel.py  test_model_health.py  test_models_config.py  test_models_dataset.py  (+46 more)
(+123 files in other folders)
